--- a/Om_2008.8.mw
+++ b/Om_2008.8.mw
@@ -93,13 +93,14 @@ You may install this distribution on the microSD card, in order to [[Boot from s
 * [http://docs.openmoko.org/trac/ticket/1682 Neo turns off before reaching x]
 
 '''Networking'''
-* No Updates/Installation are possible or pings to domains because dns is not working. This problem occurs because the /etc/resolv.conf is empty by default. You have to fill it manually like just using the content of this file on your local machine, or DNS address. Then a line in /etc/network/interfaces is required:
+* No Updates/Installation are possible or pings to domains because dns is not working. This problem occurs because the /etc/resolv.conf is empty by default.Add this line in /etc/network/interfaces:
 
 
  up echo nameserver 192.168.0.200 >/etc/resolv.conf
+This is to be inserted below gateway address and above the bluetooth networking. After this rebooting is required. Then go to /etc/resolv.conf and fill it manually by just using the content of this file on your local machine, or DNS address.
 
+This should solve most off your moko side networking issues. If you need any other help please refer to [[USB Networking]]
 
-*This is to be inserted below gateway address and above the bluetooth networking
 
 {{note| [http://en.wikipedia.org/wiki/Resolvconf resolvconf] is installed so should probably be used }}
 
