--- a/Om_2008_Locations.mw
+++ b/Om_2008_Locations.mw
@@ -68,6 +68,10 @@ and '''Locations''' will find it automatically.
 === Share Maps ===
 To share maps for other Neo users to install, see directions on how to * [[CommunityRepository#How_to_release_packages | Add a package to Openmoko Repository]]
 
+== Install Maps ==
+To install maps from [http://wiki.openmoko.org/wiki/Om2008.8_Installer Installer].
+
+
 == Reference ==
 [1] Diversity project - http://diversity.projects.openmoko.org/
 
