--- a/Om_2008_Locations.mw
+++ b/Om_2008_Locations.mw
@@ -71,6 +71,14 @@ To share maps for other Neo users to install, see directions on how to * [[Commu
 == Install Maps ==
 To install maps from [http://wiki.openmoko.org/wiki/Om2008.8_Installer Installer].
 
+{| class="wikitable" cellspacing="0" cellpadding="0" style="padding: 0%; margin:0em 0em 1em 0em; border:1px solid #c0c0c0; background:#eeeeee; floating="center";width:100%; "
+! style="background:#fcfcfc;border-left:1px solid #9999cc;border-right:1px ; border-top:2px solid 75d806; border:0px solid #222222; width:25% " |  
+[[Image:Install.png|200px|thumb|catogory]]
+! style="background:#fcfcfc;border-left:1px solid #9999cc;border-right:1px ; border-top:2px solid 75d806; border:0px solid #222222; width:25% " |
+[[Image:Install_maps2.png|200px|thumb|choose map]]
+! style="background:#fcfcfc;border-left:1px solid #9999cc;border-right:1px ; border-top:2px solid 75d806; border:0px solid #222222; width:25% " |
+[[Image:Install_maps3.png|200px|thumb|install map]]
+|}
 
 == Reference ==
 [1] Diversity project - http://diversity.projects.openmoko.org/
