--- a/Distributions.mw
+++ b/Distributions.mw
@@ -40,7 +40,7 @@ One should only use feeds from packages of the same source-branch, else 'stuff w
 * Availabilty: [http://buildhost.openmoko.org/daily/ Official Buildhost] and [[MokoMakefile]] support for development builds
 * Download: [http://buildhost.openmoko.org/daily/freerunner/  Releases are labeled "openmoko-devel-image" ]
 * Several videos of this stack by [http://uk.youtube.com/user/freeyourphone Youtube user freeyourphone] and [http://uk.youtube.com/watch?v=U05kZfURPig&NR=1 video review by BVB Tech]
-
+* [http://wiki.openmoko.org/wiki/OM2007.2|Release distributions]
 This is the base-system which is installed on Freerunner when it leaves the factory.
 
 2007.2 development driven by openmoko inc. has basically stopped and resources are allocated in favor of 2008.8, while the community currently does the effort to 'rescue' the 2007.2 telephony apps and pull them to the future middleware from FSO (see SHR).
