--- a/Openmoko_Wiki_Official_Index_Page.mw
+++ b/Openmoko_Wiki_Official_Index_Page.mw
@@ -184,6 +184,7 @@ __NOTOC__
 *[[Om2008.8 Installer]]
 =====FSO=====
 *[[GPRS FSO]]
+*[[FSO ringtones]]
 
 ===Application development tool===
 * [[Toolchain]]
