--- a/Openmoko_Wiki_Official_Index_Page.mw
+++ b/Openmoko_Wiki_Official_Index_Page.mw
@@ -466,6 +466,7 @@ __NOTOC__
 *[[Proposal for context management]]
 *[[MiLF interface]]
 *[[Wishlist:Software:GPS proxy]]
+*[[Server:WebProxy]]
 
 ===Calling Feature===
 *[[Wishlist:Least Cost Routing]]
