--- a/Openmoko_Taiwan.mw
+++ b/Openmoko_Taiwan.mw
@@ -6,3 +6,5 @@
 Openmoko 一直致力於推動台灣地區的手機軟體教育計畫，下學期 Openmoko 將與台灣地區多所學校合作，將 Openmoko 平臺以及 Neo FreeRunner 導入學校課程。 負責台灣地區校園推廣的 Jollen Chen 於 8/9 (六) 至清華大學自強基金會進行 Openmoko 體驗教育訓練，此體驗教育訓練使用了即將釋出給學校使用的教材， 並帶領現場近 40 名業界人士，實際體驗 Free Your Phone 的理念。現場反應相當熱絡。在這裡提供當天進行訓練的教材，歡迎對 Neo FreeRunner 有興趣的 朋友下載指教。
 
 課程網址：http://edu.tcfst.org.tw/query_coursedetail.asp?courseidori=97C100&tcfst=yes
+
+下載課程：
