--- a/MokoForesight.mw
+++ b/MokoForesight.mw
@@ -55,6 +55,7 @@ MokoForesight is an independent hardware lab inside Openmoko to scout, analyze, 
 =Publications=
 * [http://downloads.openmoko.org/foresight/Publications/Digging_HTC_Touch.pdf Digging HTC Touch ]
 * [http://downloads.openmoko.org/foresight/Publications/iPhone_3G_Disassembly.pdf iPhone 3G Disassembly ]
+** See also [http://www.eetimes.com/showArticle.jhtml;jsessionid=3EVLVGY31FQQCQSNDLOSKH0CJUNN2JVN?articleID=209000014 this teardown] which was published in EEtimes]
 * [http://downloads.openmoko.org/foresight/Publications/Reveal_ETEN_Glofiish_X650.pdf Reveal ETEN Glofiish X650 ]
 * [http://downloads.openmoko.org/foresight/Publications/Reveal_Gsmart_MS800.pdf Reveal Gsmart MS800 ]
 
