*Empty MediaWiki Message*

--- a/Openmoko_Local_Groups:_London.mw
+++ b/Openmoko_Local_Groups:_London.mw
@@ -91,8 +91,13 @@ Beer and Neo anyone?
 |User, apps development 
 |London
 |Freerunner
+|-
+|Tina
+|User, Sys Admin
+|User (can compile, maybe port)
+|Oxford
+|Freerunner
 |}
-
 
 
 Key:
