*Empty MediaWiki Message*

--- a/Tap_sound.mw
+++ b/Tap_sound.mw
@@ -1,5 +1,10 @@
 Annoying isn't it?
 
-To remove the tap sound, edit /etc/pulseaudio/session and either remove the sample or switch to another one.
+To remove the tap sound, edit /etc/pulse/session and either remove the sample or switch to another one.
+
+Tap sound on:
+load-sample touchscreen /usr/share/openmoko/sounds/touchscreen_click.wav
+Tap sound off:
+#load-sample touchscreen /usr/share/openmoko/sounds/touchscreen_click.wav
 
 [[Category:Customization]]
