--- a/Main_Page%2Fzh_tw.mw
+++ b/Main_Page%2Fzh_tw.mw
@@ -5,16 +5,16 @@ __NOTOC__
 
 <div align=center>
 {| class="wikitable" cellspacing="0" cellpadding="0" width=60%
-! width=30% style="background:#ff6600;border-left:0px solid white;border-right:0px solid white;border-top:0px solid white;" | <font color=white>近期活動一覽</font>
+! width=30% style="background:#ff6600;border-left:0px solid white;border-right:0px solid white;border-top:0px solid white;" | <font color=white>Openmoko 台灣</font>
 
 |valign="TOP" style="background:#333333;border-left:0px solid white;border-right:0px solid white;border-bottom:0px solid white;" | 
 <div align="left">
 
-:*[[Openmoko Taiwan|Openmoko  Education 校園推廣]]
+:*[[Openmoko Taiwan|Openmoko 台灣行銷]]
 </div>
 
 |}
-<b><font color=426fdc>▲ 獲取更多與Openmoko活動相關之資訊</font></B>
+<b><font color=426fdc>▲ 獲取 Openmoko 在台灣活動相關之資訊</font></B>
 </div>
 
 
