--- a/Openmoko_Taiwan.mw
+++ b/Openmoko_Taiwan.mw
@@ -1,10 +1,10 @@
-=行銷推廣活動=
-==訓練課程==
 
-* 2008/08/09 -- Openmoko 體驗教育訓練 -- 新竹
+==訓練活動==
 
-Openmoko 一直致力於推動台灣地區的手機軟體教育計畫，下學期 Openmoko 將與台灣地區多所學校合作，將 Openmoko 平臺以及 Neo FreeRunner 導入學校課程。 負責台灣地區校園推廣的 Jollen Chen 於 8/9 (六) 至清華大學自強基金會進行 Openmoko 體驗教育訓練，此體驗教育訓練使用了即將釋出給學校使用的教材， 並帶領現場近 40 名業界人士，實際體驗 Free Your Phone 的理念。現場反應相當熱絡。在這裡提供當天進行訓練的教材，歡迎對 Neo FreeRunner 有興趣的 朋友下載指教。
+===2008/08/09-Openmoko體驗--新竹===
 
-課程網址：[http://edu.tcfst.org.tw/query_coursedetail.asp?courseidori=97C100&tcfst=yes  Om-training Lesson-1]
+Openmoko 一直致力於推動台灣地區的手機軟體教育計畫，下學期 Openmoko 將與台灣地區多所學校合作，將 Openmoko 平臺以及 Neo FreeRunner 導入學校課程。負責台灣地區市場行銷的 Jollen Chen 於 8/9 (六) 至清華大學自強基金會進行 Openmoko 體驗式的教育訓練，此訓練使用了即將釋出給學校使用的 Openmoko 教材。現場帶領 40 名業界朋友，實際體驗 Free Your Phone 的理念。現場反應相當熱絡。在這裡提供當天進行訓練的教材，對 Neo FreeRunner 有興趣的朋友請不吝指教。
 
-下載課程：[http://people.openmoko.org/jollen/Om-training-Om2007.2-dev-v1.0-rc2.pdf Om-training-Om2007.2-dev-v1.0-rc2.pdf]
+* 活動報名：[http://edu.tcfst.org.tw/query_coursedetail.asp?courseidori=97C100&tcfst=yes  Om-training Lesson-1]
+
+* 下載講義：[http://people.openmoko.org/jollen/Om-training-Om2007.2-dev-v1.0-rc2.pdf Om-training-Om2007.2-dev-v1.0-rc2.pdf]
