--- a/Openmoko_Taiwan.mw
+++ b/Openmoko_Taiwan.mw
@@ -29,13 +29,13 @@ Openmoko大中華區行銷部 Jollen Chen 指出，Openmoko對於能夠和學生
 
 Openmoko 因為開放源碼的特性，因此很適合教學與研究場合。Openmoko 在2月份到6月份之間，於以下以學校進行教育課程。
 
-* 成功大學：2/22（五)，02:30PM~04:00PM，資訊工程學系 4263教室（資工講座）
+* 成功大學：2/22（五），02:30PM~04:00PM，資訊工程學系 4263教室（資工講座）
 * 交通大學：2/27（三），01:30PM~03:30PM
 * 中原大學：3/03（一），02:00PM~04:00PM，電學105講堂
-* 元智大學：3/26（三)，07:00PM~09:00PM
-* 東華大學：3/28（五)，02:00PM~04:00PM
-* 昆山大學：4/07(一），09:00AM~12:00PM
-* 中原大學：4/09(三)，06:10PM~07:40PM
+* 元智大學：3/26（三），07:00PM~09:00PM
+* 東華大學：3/28（五），02:00PM~04:00PM
+* 昆山大學：4/07（一），09:00AM~12:00PM
+* 中原大學：4/09（三），06:10PM~07:40PM
 * 淡江大學（研究所）：4/10(四)，02:10PM~04:00PM
 * 淡江大學（大學部）：4/18(四)，03:10PM~05:00PM
 * 中正大學：4/28(一），02:00PM~04:00PM
