--- a/Openmoko_Taiwan.mw
+++ b/Openmoko_Taiwan.mw
@@ -19,7 +19,7 @@ Openmoko 大中華區行銷部安排自由軟體基金會創辦人 Richard Stall
 
 過去大家經常誤解Free Software（自由軟體）與Open Source（開放源碼）的意 義，事實上這是完全不一樣的事情。Free Software不等於Open Source，Richard Stallman這次來台也特別希望能讓說明這二者的關係。Richard 自已也做了很清楚 簡單的解釋，他說「Open Source只是Free Software Movement的一個口號，這是完全不同的二件事情，Open Source並不是自由軟體運動的代表。」
 
-更完整的活動資訊請參閱[Richard_Stallman/zh_tw | Richard Stallman 來台演講活動]
+更完整的活動資訊請參閱[[Richard_Stallman/zh_tw | Richard Stallman 來台演講活動]]
 
 ==校園巡迴九十六學年度==
 
