*Empty MediaWiki Message*

--- a/Om_2008_Installer.mw
+++ b/Om_2008_Installer.mw
@@ -1,7 +1,7 @@
 {{Om 2008.8}}
 
 ==Introduction==
-The OpenMoko Installer is [[http://code.google.com/p/om-assassin/|Assassin]] a tool for ''installing'', ''updating'' and ''uninstalling'' programs on your Neo.  
+The OpenMoko Installer is [http://code.google.com/p/om-assassin/ Assassin] a tool for ''installing'', ''updating'' and ''uninstalling'' programs on your Neo.  
 
 {| class="wikitable" cellspacing="0" cellpadding="0" style="padding: 0%; margin:0em 0em 1em 0em; border:1px solid #c0c0c0; background:#eeeeee; floating="center";width:100%; "
 ! style="background:#fcfcfc;border-left:1px solid #9999cc;border-right:1px ; border-top:2px solid 75d806; border:0px solid #222222; width:25% " |  
