--- a/Om_2008.8.mw
+++ b/Om_2008.8.mw
@@ -29,14 +29,14 @@
 [[Image:List.png|200px|center]]
 |}
 
-== What's New ==
+== Что нового==
 '''Om 2008.8''' was designed to be empty, for the very purpose of showcasing your ideas.
 
 Think of our products as galleries. We're building the environment. Each one different from the next. You'll get all the free art supplies you could imagine because we want you to add your own meaning. You choose: consume, create, or both.
 
 Either way you create your own meaning. It's about you. 
 
-=== Customize ===
+=== Настройка===
 '''Om 2008.8''' allows you to customize your Neo in many aspects.
 
 *  '''Use the [[Om2008.8_Installer|Installer]]''' to find apps and modifications for your Neo.
@@ -49,7 +49,7 @@ Either way you create your own meaning. It's about you.
 * share your applications ([[Om2008.8_Installer|Installer]])
 :share your ideas with the world by adding packages to the [http://wiki.openmoko.org/wiki/CommunityRepository Community Repository].  It is a great database for all things openmoko and can easily be accessed by any user through the [[Om2008.8 Installer|Installer]].
 
-=== Om 2008.8 Guide ===
+=== Om 2008.8 Руководство===
 A guide for getting to know Om 2008.8 : [[Om 2008.8 Guide]]
 
 = Download =
