--- a/Om_2008.8.mw
+++ b/Om_2008.8.mw
@@ -52,21 +52,21 @@ Either way you create your own meaning. It's about you.
 === Om 2008.8 Руководство===
 A guide for getting to know Om 2008.8 : [[Om 2008.8 Guide]]
 
-= Download =
+= Скачать =
 
-== Flash Om 2008.8 images ==
+== Образ прошивки 2008.8 ==
 
-'''Download Om 2008.8 images'''
+'''Скачать образ 2008.8 '''
 
 These images are to be flashed to the NAND memory of the FreeRunner :
 * [http://downloads.openmoko.org/releases/Om2008.8/Om2008.8.rootfs.jffs2 Om2008.8.rootfs.jffs2] (root filesystem image)
 * [http://downloads.openmoko.org/releases/Om2008.8/Om2008.8.uImage.bin Om2008.8.uimage.bin] (kernel)
 
-'''Install'''
+'''Установка'''
 
 * For instructions on how to flash your device, please refer to [[Flashing the Neo FreeRunner]].
 
-== Alternative : running from microSD card ==
+== Альтернатива: Запуск с карточки microSD ==
 
 You may install this distribution on the microSD card, in order to [[Boot from sd card|boot from microSD card]]. Tarfiles available here: [http://downloads.openmoko.org/releases/Om2008.8/]. That allows you to keep another distribution installed in NAND (for instance to test 2008.08 while still having 2007.2 for default boo).
 
