--- a/Om_2008.8.mw
+++ b/Om_2008.8.mw
@@ -70,7 +70,7 @@ These images are to be flashed to the NAND memory of the FreeRunner :
 
 You may install this distribution on the microSD card, in order to [[Boot from sd card|boot from microSD card]]. Tarfiles available here: [http://downloads.openmoko.org/releases/Om2008.8/]. That allows you to keep another distribution installed in NAND (for instance to test 2008.08 while still having 2007.2 for default boo).
 
-= Known Issues =
+= Извесные проблемы =
 '''GSM'''
 
 * [http://docs.openmoko.org/trac/ticket/1662 GSM not working properly after x hours]
@@ -78,9 +78,9 @@ You may install this distribution on the microSD card, in order to [[Boot from s
 
 '''WiFi'''
  
-* [http://docs.openmoko.org/trac/ticket/1625 WiFi can only connect once]
+* [http://docs.openmoko.org/trac/ticket/1625 WiFi может подключится только один раз]
 
-'''Audio quality'''
+'''Качество звука'''
 
 * [http://docs.openmoko.org/trac/ticket/1721 QT-Dialer Sometimes can not hear anything durring connecting call]
 * [http://docs.openmoko.org/trac/ticket/1640 Improve overall audio]
