--- a/Edje.mw
+++ b/Edje.mw
@@ -18,3 +18,4 @@ After that you can install the needed tools with:
 
 = Links =
 * [http://docs.enlightenment.org/api/edje/html/ docs.enlightment.org] - offical edje documentation
+* [http://52grad.de/.stuff/freerunner/ 52grad.de] - example on using edj files
