/* Chip Scouting */ typo

--- a/MokoForesight.mw
+++ b/MokoForesight.mw
@@ -48,7 +48,7 @@ MokoForesight is an independent hardware lab inside Openmoko to scout, analyze, 
 |-
 | WiFi and BT Combo Module (AR6002+BC6) ||Not Checked || Not Checked || Good (Shawn Aug.7.2008)||NA
 |-
-| Wavecom WMP100 || AT docs open, ability to program new AT commands for everywone with a "free"(ly available) SDK. || Order quantity? || Component is fine, but only supports Class10 GPRS unfortunately|| No idea, see [http://www.wavecom.com/modules/movie/scenes/products/index.php?fuseAction=wirelessCPU&productName=WMP100 wavecom.com] ([http://www.wavecom.com/modules/movie/scenes/products/index.php?fuseAction=downloads&productName=WMP100 sort of])
+| Wavecom WMP100 || AT docs open, ability to program new AT commands for everyone with a "free"(ly available) SDK. || Order quantity? || Component is fine, but only supports Class10 GPRS unfortunately|| No idea, see [http://www.wavecom.com/modules/movie/scenes/products/index.php?fuseAction=wirelessCPU&productName=WMP100 wavecom.com] ([http://www.wavecom.com/modules/movie/scenes/products/index.php?fuseAction=downloads&productName=WMP100 sort of])
 |-
 | NA ||NA || NA || NA || NA
 |-
