--- a/Om_2008.8.mw
+++ b/Om_2008.8.mw
@@ -3,7 +3,7 @@
 
 {{Distributions|Om 2008.8}}
 
-=Введение=
+=Introduction=
 '''Om 2008.8''' is the successor to [[Om 2007.2]] and had '''ASU''' as a codename. It was [http://lists.openmoko.org/pipermail/community/2008-August/025619.html launched] on '''August 08, 2008'''. Om 2008.8 uses EFL for the launcher, custom UI applications and [[QtopiaOnX11|Qtopia on X11]] for telephony.  It is the first step from GTK+ on x11 to using multiple toolkits in combination. '''Om 2008.8''' now supports [http://www.enlightenment.org/ EFL], [http://trolltech.com/products/qtopia Qtopia] and [http://www.gtk.org GTK+] applications.
 
 ''To see how it all got started go to'' [[Om2008.8 Feature Plan|Om 2008.8 Feature Plan]].
@@ -29,14 +29,14 @@
 [[Image:List.png|200px|center]]
 |}
 
-== Что нового==
+== What's New ==
 '''Om 2008.8''' was designed to be empty, for the very purpose of showcasing your ideas.
 
 Think of our products as galleries. We're building the environment. Each one different from the next. You'll get all the free art supplies you could imagine because we want you to add your own meaning. You choose: consume, create, or both.
 
 Either way you create your own meaning. It's about you. 
 
-=== Настройка===
+=== Customize ===
 '''Om 2008.8''' allows you to customize your Neo in many aspects.
 
 *  '''Use the [[Om2008.8_Installer|Installer]]''' to find apps and modifications for your Neo.
@@ -49,28 +49,28 @@ Either way you create your own meaning. It's about you.
 * share your applications ([[Om2008.8_Installer|Installer]])
 :share your ideas with the world by adding packages to the [http://wiki.openmoko.org/wiki/CommunityRepository Community Repository].  It is a great database for all things openmoko and can easily be accessed by any user through the [[Om2008.8 Installer|Installer]].
 
-=== Om 2008.8 Руководство===
+=== Om 2008.8 Guide ===
 A guide for getting to know Om 2008.8 : [[Om 2008.8 Guide]]
 
-= Скачать =
+= Download =
 
-== Образ прошивки 2008.8 ==
+== Flash Om 2008.8 images ==
 
-'''Скачать образ 2008.8 '''
+'''Download Om 2008.8 images'''
 
 These images are to be flashed to the NAND memory of the FreeRunner :
 * [http://downloads.openmoko.org/releases/Om2008.8/Om2008.8.rootfs.jffs2 Om2008.8.rootfs.jffs2] (root filesystem image)
 * [http://downloads.openmoko.org/releases/Om2008.8/Om2008.8.uImage.bin Om2008.8.uimage.bin] (kernel)
 
-'''Установка'''
+'''Install'''
 
 * For instructions on how to flash your device, please refer to [[Flashing the Neo FreeRunner]].
 
-== Альтернатива: Запуск с карточки microSD ==
+== Alternative : running from microSD card ==
 
 You may install this distribution on the microSD card, in order to [[Boot from sd card|boot from microSD card]]. Tarfiles available here: [http://downloads.openmoko.org/releases/Om2008.8/]. That allows you to keep another distribution installed in NAND (for instance to test 2008.08 while still having 2007.2 for default boo).
 
-= Извесные проблемы =
+= Known Issues =
 '''GSM'''
 
 * [http://docs.openmoko.org/trac/ticket/1662 GSM not working properly after x hours]
@@ -78,9 +78,9 @@ You may install this distribution on the microSD card, in order to [[Boot from s
 
 '''WiFi'''
  
-* [http://docs.openmoko.org/trac/ticket/1625 WiFi может подключится только один раз]
+* [http://docs.openmoko.org/trac/ticket/1625 WiFi can only connect once]
 
-'''Качество звука'''
+'''Audio quality'''
 
 * [http://docs.openmoko.org/trac/ticket/1721 QT-Dialer Sometimes can not hear anything durring connecting call]
 * [http://docs.openmoko.org/trac/ticket/1640 Improve overall audio]
