--- a/Getting_Openmoko.mw
+++ b/Getting_Openmoko.mw
@@ -5,7 +5,7 @@ If you buy a Neo FreeRunner now, [[Openmoko2007.2]] will be preinstalled. Howeve
 
 You can purchase the FreeRunner from the Openmoko store or from a local distributor. At the Openmoko store the FreeRunner costs US$399. It has a limited warranty for 14 days. If you want an extended warranty you should buy from a distributor.
 
-*[http://us.direct.openmoko.com/ Openmoko Store]
+*[http://www.openmoko.com/store.html Openmoko Store]
 
 ===Group sales===
 
