--- a/Server:WebProxy.mw
+++ b/Server:WebProxy.mw
@@ -22,7 +22,15 @@ This is done by the user-agent caching the pages it downloads, then informing th
 
 The proxy then simply sends the compressed differences between the previous and current version.
 
-''improvement: it would be better NOT to modify the client, but instead have a 'reassembly proxy' on the client, so that all http clients/user agents benefit without hacks. The reassembly proxy could then inject a cookie to keep track of page versions. - compare this http://ozlabs.org/~rusty/rproxy.html however and check for patent issues before any actual work is done.''
+=Q&A=
+* Would be better NOT to modify the client, but instead have a 'reassembly proxy' on the client, so that all http clients/user agents benefit without hacks. 
+** This is a simple option initially.
+
+* How does this differ from rproxy? (http://ozlabs.org/~rusty/rproxy.html)
+** It differs primarily in that it does not require webservers to support anything. Only that a user desiring to run it has somewhere to put their personal proxy.
+** It also differs in that it has perfect knowledge of the state of the cache on the mobile device.
+** It differs significantly from rsync/rproxy, as the core of those programs - negotiating file differences over a remote link - is not done.
+** it does not require any negotiation over the (potentially very slow) link.
 
 Other optimisations:
 * Comparing pages, and ensuring that  any page has in fact changed before downloading, as many servers misreport pages changed when they have not.
