--- a/Server:WebProxy.mw
+++ b/Server:WebProxy.mw
@@ -30,7 +30,7 @@ The proxy then simply sends the compressed differences between the previous and 
 ** It differs primarily in that it does not require webservers to support anything. Only that a user desiring to run it has somewhere to put their personal proxy.
 ** It also differs in that it has perfect knowledge of the state of the cache on the mobile device.
 ** It differs significantly from rsync/rproxy, as the core of those programs - negotiating file differences over a remote link - is not done.
-** it does not require any negotiation over the (potentially very slow) link.
+** it does not require any negotiation over the (potentially very slow) link, and also enables the proxy to potentially send other changed pages that are referred in the changes.
 
 Other optimisations:
 * Comparing pages, and ensuring that  any page has in fact changed before downloading, as many servers misreport pages changed when they have not.
