/* Painless SDK installation & Setup */

--- a/Wish_List.mw
+++ b/Wish_List.mw
@@ -4,7 +4,7 @@ This article is a place to collect various thoughts about the future of the [[Op
 === Painless SDK installation & Setup ===
 Our goal should be a completely painless setup for somebody wanting to develop using [[OpenMoko]]
 
-* one command for installation (apt-get install openmoko)
+* one command for installation (apt-get install openmoko as in [http://blog.leggewie.org/?p=39 apt-get'able Openembedded])
 * one command to start Xnest (openmoko-xephyr?)
 * one command to start an i386 shell (openmoko-386-shell)
 * one command to start an armel shell (openmoko-armel-shell)
