--- a/Edje.mw
+++ b/Edje.mw
@@ -1,10 +1,10 @@
 = Edje =
-Is a configuration-file format which origins of [http://www.enlightenment.org/ enlighment 17]. It is used by Openmoko and Illume for configuring a lot of the look of OpenMoko and its applications.
+Is a configuration-file format which origins of [http://www.enlightenment.org/ Enlightenment 17]. It is used by Openmoko and Illume for configuring a lot of the look of OpenMoko and its applications.
 
 Edje uses *.edj Files as binary-configuration files and *.edc as the source of such an *.edj file.
 
 For compiling an *.edc file to an *.edj file you need: edje_cc
-For decompilin an *.edj file to an *.edc file you need: edje_decc (you might want to do this to learn about how such a file has to look like)
+For decompiling an *.edj file to an *.edc file you need: edje_decc (you might want to do this to learn about how such a file has to look like)
 
 = Installation =
 You can install edje_cc and edje_decc for Ubuntu by adding this source to your /etc/apt/sources.lst:
