/* Reactivating Keyboard toggle */ The 'opkg install illume-config' option is covered on the keyboard toggle page, removed it from here, and updated the link.

--- a/Om_2008_keyboard.mw
+++ b/Om_2008_keyboard.mw
@@ -44,13 +44,8 @@ Note that to delete a character inside the input box, the word guessing box need
 
 If you hover your finger (or stylus) over a letter for more than 2 seconds a magnifiying glass, or zoom mode is displayed that allows you to see the letter you are selecting. This also overrides the prediction feature for this letter, so you can type specific letters with this method.
 
-== Reactivating Keyboard toggle ==
-The ASU release of 2008-08-08 removed the small "qwerty" button from the top menu. This button can be added back to into the top menu by:
-* Following the instructions on the page [[ASU_Keyboard_Toggle]]. This page describes how to get the toggle back
-* Installing the package ''illume-config'' through the installer
-
-However, most applications should bring up the keyboard automatically when keyboard input is required.
-
+== Reactivating The Keyboard Toggle ==
+Most applications should bring up the keyboard automatically when keyboard input is required, however, advanced users can activate a small 'qwerty' button which can manually toggle the keyboard on and off.  See the [[Keyboard_Toggle|keyboard toggle tutorial]] for more information.
 
 == Using the Full Qwerty keyboard ==
 * backup /usr/lib/enlightenment/modules/illume/keyboards/Default.kbd
