/* Backing up everything */ Adding link to moving to SD

--- a/Backup.mw
+++ b/Backup.mw
@@ -18,6 +18,12 @@ If you want to check what is in the backup, run the following, replacing the fil
 
 == Backing up everything ==
 
+You may either :
+* Backup the flash contents, in order to be able to restore (see bellow)
+* or move the system to SD to be able to boot it from SD in case of need. See [[Moving current system from flash to SD]]
+
+=== Backing-up flash images ===
+
 You will need the [[Dfu-util]] to make a backup of your existing image.
 
 As when [[Flashing_the_Neo_FreeRunner|flashing]], you will need to be in [[Booting_the_Neo_FreeRunner#Log_into_U-Boot_in_the_NOR_Flash|U-Boot in the NOR Flash]]. Log into the NOR uBoot menu and select ''Set console to USB'' (for NRF just stay in NOR uBoot menu, do not select or enter anything). Now you will be able to flash, make backups of your Freerunner or query the Freerunner with [[Dfu-util|dfu-util]].  Backup is fairly slow; it took over ten minutes to back up a 247 MB rootfs.
