moved BTS, BSC here, formatted to headings: can link terms directly, has TOC.

--- a/Glossary.mw
+++ b/Glossary.mw
@@ -1,34 +1,40 @@
 This Page is for collection special vocabulary/abbreviations used inside our project Openmoko.
 
 
-;AGPS
-:Assisted GPS - see http://en.wikipedia.org/wiki/AGPS
+==AGPS==
+Assisted GPS - see http://en.wikipedia.org/wiki/AGPS
 
-;BGA
-:A ball grid array (BGA) is a type of surface-mount packaging used for integrated circuits  http://en.wikipedia.org/wiki/BGA
+==BGA==
+A ball grid array (BGA) is a type of surface-mount packaging used for integrated circuits  http://en.wikipedia.org/wiki/BGA
 
-;FBGA
-:FINE ball grid array - see (BGA)
+==BSC==
+Base Station Controller - This is a part of the GSM network. It is connected via Abis interface to the BTS. Upstream connection is to the MSC. 
 
-;FPGA
-:Field Programmable Gate Array (not used in v1)  http://en.wikipedia.org/wiki/FPGA
+==BTS==
+Base Transceiver Station - This is the part between the MS and BSC in a GSM network. It is interfaced to the BSC using the Abis protocol. 
 
-;GPRS
-:General Packet Radio Service - see http://en.wikipedia.org/wiki/General_Packet_Radio_Service
+==FBGA==
+FINE ball grid array - see (BGA)
 
-;GPS
-:Global Positioning System - see http://en.wikipedia.org/wiki/Gps
+==FPGA==
+Field Programmable Gate Array (not used in v1)  http://en.wikipedia.org/wiki/FPGA
 
-;GTA01
-:Internal codename of the first phone hardware release, the Neo 1973
+==GPRS==
+General Packet Radio Service - see http://en.wikipedia.org/wiki/General_Packet_Radio_Service
 
-;GTA02
-:Internal codename of the second phone hardware release, the Neo FreeRunner
+==GPS==
+Global Positioning System - see http://en.wikipedia.org/wiki/Gps
 
-;MSC
-:Mobile Switching Centre. A major componenent of the GSM Network.
+==GTA01==
+Internal codename of the first phone hardware release, the Neo 1973
 
-;PLMN
-:Acronym for [http://en.wikipedia.org/wiki/Public_land_mobile_network Public Land Mobile Network] what your mobile phone almost certainly connects to.
+==GTA02==
+Internal codename of the second phone hardware release, the Neo FreeRunner
+
+==MSC==
+Mobile Switching Centre. A major componenent of the GSM Network.
+
+==PLMN==
+Acronym for [http://en.wikipedia.org/wiki/Public_land_mobile_network Public Land Mobile Network] what your mobile phone almost certainly connects to.
 
 [[Category:Information]]
