--- a/Om_2008_Feature_Plan.mw
+++ b/Om_2008_Feature_Plan.mw
@@ -131,6 +131,5 @@ Following features are to be added in the next scheduled release.
 |style="background:#ccffcc; text-align:center;"| Distro || add terminal package with keyboard || Julian
 |}
 
-[[Category:Documentation]]
 [[Category:Distributions]]
-[[Category:ASU]]
+[[Category:Om 2008.8]]
