*Empty MediaWiki Message*

--- a/Om_2008.8.mw
+++ b/Om_2008.8.mw
@@ -112,3 +112,4 @@ This should solve most off your moko side networking issues. If you need any oth
 
 
 [[Category:Openmoko]]
+[[Category:Om 2008.8]]
