Category changes: +Om 2008.8, -ASU

--- a/Om_2008_keyboard.mw
+++ b/Om_2008_keyboard.mw
@@ -57,5 +57,5 @@ Most applications should bring up the keyboard automatically when keyboard input
 
 
 
-[[Category:ASU]]
+[[Category:Om 2008.8]]
 [[Category:Guides|Keyboard Om 2008.8]]
