*Empty MediaWiki Message*

--- a/Om_2008_Installer.mw
+++ b/Om_2008_Installer.mw
@@ -130,3 +130,4 @@ For more information, refer to the reference section below.
 
 [[Category:Applications]]
 [[Category:Openmoko2008.8]]
+[[Category:Om 2008.8]]
