*Empty MediaWiki Message*

--- a/Om_2008_Locations.mw
+++ b/Om_2008_Locations.mw
@@ -89,4 +89,4 @@ To install maps from [http://wiki.openmoko.org/wiki/Om2008.8_Installer Installer
 
 
 [[Category:Applications]]
-[[Category:Openmoko2008.8]]
+[[Category:Om 2008.8]]
