*Empty MediaWiki Message*

--- a/Om_2008_Sudoku.mw
+++ b/Om_2008_Sudoku.mw
@@ -34,4 +34,4 @@ This UI application is written by python. Download the source code, it comes wit
 
 
 [[Category:Applications]]
-[[Category:Openmoko2008.8]]
+[[Category:Om 2008.8]]
