*Empty MediaWiki Message*

--- a/Illume.mw
+++ b/Illume.mw
@@ -1,3 +1,4 @@
+{{Om 2008.8}}
 il·lume (ĭ-lōōm') tr.v. To illuminate. 
 Bringing light to the darkness of the mobile world.
 
@@ -33,3 +34,4 @@ Do most things E could do
 Eat small children
 
 [[Category:Openmoko]]
+[[Category:Om 2008.8]]
