*Empty MediaWiki Message*

--- a/Om_2008_Feature_Plan.mw
+++ b/Om_2008_Feature_Plan.mw
@@ -133,3 +133,4 @@ Following features are to be added in the next scheduled release.
 
 [[Category:Distributions]]
 [[Category:Om 2008.8]]
+[[Category:Om 2008.8]]
