*Empty MediaWiki Message*

--- a/Om_2007.2.mw
+++ b/Om_2007.2.mw
@@ -1,7 +1,7 @@
 {{OM2007.2}}
 {{Distributions|Om 2007.2}}
 
-'''Om 2007.2''' is the second version of the Openmoko distribution. Development began on 2007-07-26.
+'''Om 2007.2''' is the second version of the Openmoko distribution. Development began on 2007-07-26. [[Om 2008.8]] is the successor of this software stack.
 
 Goals of this version are an improved set of PIM applications, improved theming that fixes a lot of the usability problems of the first generation design, more formalized UI guidelines and a number of changes in the build system. The latter should introduce more recent software by staying closer in sync with upstream org.openembedded.dev.
 
