*Empty MediaWiki Message*

--- a/Om_2008_Guide.mw
+++ b/Om_2008_Guide.mw
@@ -39,3 +39,5 @@ Press "remove" to close currently focused application.
 '''"killall packagekitd"''' - Quits any package manager which could be running. (Run this command if you get the "Could not obtain administrative lock" error message while running opkg commands)
 
 '''"shutdown -r now"''' or  '''"reboot"'''- Reboots your phone.
+
+[[Category:Om 2008.8]]
