Category changes: -Openmoko2008.8, -Openmoko, +Om 2008.8

--- a/Om_2008.8%2Fde.mw
+++ b/Om_2008.8%2Fde.mw
@@ -53,6 +53,5 @@ Om 2008.8 erlaubt es Dir Dein Neo in vielerlei Hinsicht anzupassen.
 * [http://downloads.openmoko.org/releases/Om2008.8/Om2008.8.rootfs.jffs2 Om2008.8.rootfs.jffs2]
 * [http://downloads.openmoko.org/releases/Om2008.8/Om2008.8.uImage.bin Om2008.8.uimage.bin]
 
-[[Category:Openmoko]]
 [[Category:Distributions]]
-[[Category:Openmoko2008.8]]
+[[Category:Om 2008.8]]
