--- a/Group_sales.mw
+++ b/Group_sales.mw
@@ -7,12 +7,11 @@ So join us within a local group !
 
 <div style='float:right'>__TOC__</div>
 
-=== Argentina ===
+== Argentina ==
 ==== Buenos Aires ====
 Status: 1/10
 
 * Pablete93 [http://wiki.openmoko.org/wiki/Special:Emailuser/Pablete93 Contact me here]
-
 
 == [[Group Sales Australia| Australia ]]==
 
