--- a/MokoForesight.mw
+++ b/MokoForesight.mw
@@ -21,6 +21,7 @@ MokoForesight is an independent hardware lab inside Openmoko to scout, analyze, 
 =Current Tasks=
 
 * U-boot porting to GTA03EVB (Matt) '''ONGOING'''
+** The core can run at 533 MHz with 133MHz SDRAM
 * SIMCOM 3G MODEM Research (Shawn) '''ONGOING'''
 *
 * GTA03EVB Hardware Verification (Matt & Shawn) '''NOT STARTED'''
