--- a/Group_sales.mw
+++ b/Group_sales.mw
@@ -13,6 +13,9 @@ Status: 1/10
 
 * Pablete93 [http://wiki.openmoko.org/wiki/Special:Emailuser/Pablete93 Contact me here]
 
+
+10 teléfonos = $11439 + impuestos + envío
+
 == [[Group Sales Australia| Australia ]]==
 
 
