/* Other */ "permission-free development" - this could go underdevelopment - but i'm not sure which subcategory of it..

--- a/Wish_List.mw
+++ b/Wish_List.mw
@@ -1118,6 +1118,9 @@ A rubberized shell, like some of the other new phones.  Helps me not drop it, es
 ====Phone subsidies====
 Get carriers to give you an Openmoko like they will give away other phones when you sign a contract.
 
+===="permission-free development"====
+"Meanwhile, Shuttleworth said he hopes to see the industry move to an environment of "permission-free development," where developers are free to jump in and write code off of core open-source projects without seeking permissions." [http://www.eweek.com/c/a/Linux-and-Open-Source/Shuttleworth-Make-Desktop-Linux-Better-than-Apple/]
+
 == GPS Software ==
 * implement "Cheap GPS" as demonstrated in the image, may be useful for geocaching.
 [[Image:Cheap_gps.png|right|300px|From xkcd.com :-)]]
