--- a/Group_sales.mw
+++ b/Group_sales.mw
@@ -14,7 +14,8 @@ Status: 1/10
 * Pablete93 [http://wiki.openmoko.org/wiki/Special:Emailuser/Pablete93 Contact me here]
 
 
-10 teléfonos = $11439 + impuestos + envío
+10 teléfonos = valor teléfonos + impuestos + envío
+10 teléfonos = $11439 + impuestos + $181
 
 == [[Group Sales Australia| Australia ]]==
 
