/* Test application */ added .0 to python script

--- a/Accelerometer_data_retrieval.mw
+++ b/Accelerometer_data_retrieval.mw
@@ -199,7 +199,7 @@ event = in_file.read(16)
 while event:
 	(time1,time2, type, code, value) = \
 		struct.unpack(fmt,event)
-	time = time1 + time2 / 1000000
+	time = time1 + time2 / 1000000.0
 
 	if type == 2:
 		if code == 0:
