--- a/MokoForesight.mw
+++ b/MokoForesight.mw
@@ -21,14 +21,14 @@ MokoForesight is an independent hardware lab inside Openmoko to scout, analyze, 
 =Current Tasks=
 
 * U-boot porting to GTA03EVB (Matt) '''ONGOING'''
-** The core can run at 533 MHz with 133MHz SDRAM
-* SIMCOM 3G MODEM Research (Shawn) '''ONGOING'''
+** The core can run at 533 MHz with 133MHz SDRAM (Done Aug.12.2008)
+* SIMCOM 3G MODEM Research (Shawn) '''ONHOLD'''
 *
-* GTA03EVB Hardware Verification (Matt & Shawn) '''NOT STARTED'''
+* GTA03EVB Hardware Verification (Matt & Shawn) '''ONGOING'''
 ** Starts when GTA03EVB is in office (AUG.11.2008)
 ** voltage, power consumption, RF characteristics (finished by end of AUG.22.2008)
 *** Siemens MC 75i EDGE MODEM 
-*** u-blox 5 Antaris GPS
+*** u-blox 5 Antaris GPS 
 *** CSR BT
 *** Accton/Atheros AR6001 Wi-Fi module
 *
