*Empty MediaWiki Message*

--- a/Om_2008_Guide.mw
+++ b/Om_2008_Guide.mw
@@ -40,4 +40,16 @@ Press "remove" to close currently focused application.
 
 '''"shutdown -r now"''' or  '''"reboot"'''- Reboots your phone.
 
+''' Bugs/Fixes '''
+
+*The wifi doesn't work too well right now.
+
+*Accelerometers don't work right now. Although they could be very soon. [[http://www.youtube.com/watch?v=K2S2rQUETwc|Youtube Video]]
+
+*If you let the battery completely drain you will have problems booting it up. Plug it into the wall charger for a few hours and then plug it into your computer and press power.
+
+*Your have to install "illume-config" to have more control over power management, scrolling speeds, keyboard options, and to change how the interface looks.
+
+*Some software that you install by command-line may appear in in the settings menu (wrench) that you unlock after installing "illume-config".
+
 [[Category:Om 2008.8]]
