*Empty MediaWiki Message*

--- a/Om_2008_Guide.mw
+++ b/Om_2008_Guide.mw
@@ -28,17 +28,17 @@ Press "remove" to close currently focused application.
 
 ''' Commands '''
 
-'''"ifconfig"''' - Displays network information.
+*'''"ifconfig"''' - Displays network information.
 
-'''"opkg update"''' - Updates list of available software.
+*'''"opkg update"''' - Updates list of available software.
 
-'''"opkg install"''' - Install software.
+*'''"opkg install"''' - Install software.
 
-'''"opkg upgrade"''' - Updates your software.
+*'''"opkg upgrade"''' - Updates your software.
 
-'''"killall packagekitd"''' - Quits any package manager which could be running. (Run this command if you get the "Could not obtain administrative lock" error message while running opkg commands)
+*'''"killall packagekitd"''' - Quits any package manager which could be running. (Run this command if you get the "Could not obtain administrative lock" error message while running opkg commands)
 
-'''"shutdown -r now"''' or  '''"reboot"'''- Reboots your phone.
+*'''"shutdown -r now"''' or  '''"reboot"'''- Reboots your phone.
 
 ''' Bugs/Fixes '''
 
