--- a/Om_2008_keyboard.mw
+++ b/Om_2008_keyboard.mw
@@ -49,14 +49,13 @@ If you hover your finger (or stylus) over a letter for more than 2 seconds a mag
 Most applications should bring up the keyboard automatically when keyboard input is required, however, advanced users can activate a small 'qwerty' button which can manually toggle the keyboard on and off.  See the [[Keyboard_Toggle|keyboard toggle tutorial]] for more information.
 
 == Using the Full Qwerty keyboard ==
-* backup /usr/lib/enlightenment/modules/illume/keyboards/Default.kbd
-* rename Full-QWERTY.kbd to Default.kbd
+* backup /usr/lib/enlightenment/modules/illume/keyboards/Default.kbd and /usr/lib/enlightenment/modules/illume/keyboards/Full-QWERTY.kbd
+* opkg install http://buildhost.openmoko.org/daily-feed/armv4t/libdbus-1-3_1.2.1-r3_armv4t.ipk
 * opkg install http://buildhost.openmoko.org/daily-feed/armv4t/illume_0.0+svnr196-r12_armv4t.ipk
-* (You might need to upgrade libdbus-1-3: opkg install http://buildhost.openmoko.org/daily-feed/armv4t/libdbus-1-3_1.2.1-r3_armv4t.ipk )
+* rename /usr/lib/enlightenment/modules/illume/keyboards/Terminal.kbd to Terminal.kbd.orig
+* copy the Full-QWERTY.kbd that you backed up in the first step to /usr/lib/enlightenment/modules/illume/keyboards/Terminal.kbd
 * restart x: /etc/init.d/xserver-nodm restart
 * enjoy the full qwerty keyboard
-
-
 
 [[Category:Om 2008.8]]
 [[Category:Guides|Keyboard Om 2008.8]]
