/* Using the Full Qwerty keyboard */

--- a/Om_2008_keyboard.mw
+++ b/Om_2008_keyboard.mw
@@ -54,6 +54,7 @@ Most applications should bring up the keyboard automatically when keyboard input
 * opkg install http://buildhost.openmoko.org/daily-feed/armv4t/illume_0.0+svnr196-r12_armv4t.ipk
 * rename /usr/lib/enlightenment/modules/illume/keyboards/Terminal.kbd to Terminal.kbd.orig
 * copy the Full-QWERTY.kbd that you backed up in the first step to /usr/lib/enlightenment/modules/illume/keyboards/Terminal.kbd
+* copy the Full-QWERTY.kbd that you backed up in the first step to /usr/lib/enlightenment/modules/illume/keyboards/Default.kbd
 * restart x: /etc/init.d/xserver-nodm restart
 * enjoy the full qwerty keyboard
 
