*Empty MediaWiki Message*

--- a/Orrery.mw
+++ b/Orrery.mw
@@ -7,6 +7,8 @@
 
 [[Category:Applications]]
 
+'''A .ipk file for this program is now available.   It is much easier to install than it used to be.'''
+
 Note - although the screenshots shown here were
 taken with the 2007.2 stack, this application
 works under 2007.2 or 2008.8 (ASU).
@@ -69,7 +71,8 @@ seconds to show the constellations.   This only
 happens the first time - subsequent switches
 are pretty fast (< 1 second).
 
-Please send comments, suggestions and questions to orrery.moko@gmail.com
+Please send comments, suggestions, questions and/or
+abuse to orrery.moko@gmail.com
 
 [[category:Openmoko]]
 [[category:GPS]]
