*Empty MediaWiki Message*

--- a/Main_Page%2Fes.mw
+++ b/Main_Page%2Fes.mw
@@ -26,6 +26,7 @@ El sistema operativo Openmoko, que incluye un servidor X completo, permite a los
 <td>
 ===<font color=white>Sobre Openmoko</font>===
 * [[Introduction/es|Introducción]]
+* [[Why Openmoko/es|Porqué Openmoko?]]
 * [[Neo FreeRunner/es|Teléfono Neo FreeRunner]]
 * [[Supported_devices/es| Hardware compatible]]
 * [[FAQ|Preguntas Mas Frecuentes(FAQ)]]
