--- a/Users_Repositories.mw
+++ b/Users_Repositories.mw
@@ -78,6 +78,9 @@ A huge number of packages is located at http://rabenfrost.net/celtune/ipk/
 Use the following line to add celtune's feed to your neo: 
  cd /etc/opkg && wget http://rabenfrost.net/celtune/celtune-rabenfrost.conf
 
+kd8ikt's rare finds/builds <br>
+http://we.trekbeyond.org/~kd8ikt/moko/buildz/repo/kd8ikt.conf<br>
+
 If you want to add a link, it would be nice to enforce a standard format of these feeds so that they can be browsed automatically.
 
 [[Category:Openmoko]]
