--- a/Users_Repositories.mw
+++ b/Users_Repositories.mw
@@ -82,6 +82,7 @@ Use the following line to add celtune's feed to your neo:
 kd8ikt's rare finds/builds <br>
 http://we.trekbeyond.org/~kd8ikt/moko/buildz/repo/kd8ikt.conf<br>
 
+===Note===
 If you want to add a link, it would be nice to enforce a standard format of these feeds so that they can be browsed automatically.
 
 [[Category:Openmoko]]
