--- a/MokoMakefile.mw
+++ b/MokoMakefile.mw
@@ -105,6 +105,8 @@ If you want to make the ASU or FSO instead of the OM2007.2, see [[Distributions]
   OM_GIT_BRANCH := org.openmoko.asu.stable # ASU stable
   OM_GIT_BRANCH := org.openembedded.dev    # FSO
 
+Note that if you want to build FSO, you should change OM_GIT_SITE to git.openembedded.net as well, since FSO is developed in the OpenEmbedded repository, not the Openmoko repository.
+
 Set up the environment with:
 
    make setup
