--- a/MokoMakefile.mw
+++ b/MokoMakefile.mw
@@ -100,10 +100,11 @@ If that doesn't work, try
 
 === Environment ===
 If you want to make the ASU or FSO instead of the OM2007.2, see [[Distributions]], you need to edit your Makefile.  Change OM_GIT_BRANCH to one of the following:
-  OM_GIT_BRANCH := org.openmoko.dev        # OM2007.2 (enabled by default)
-  OM_GIT_BRANCH := org.openmoko.asu.dev    # ASU
-  OM_GIT_BRANCH := org.openmoko.asu.stable # ASU stable
-  OM_GIT_BRANCH := org.openembedded.dev    # FSO
+  OM_GIT_BRANCH := org.openmoko.dev         # OM2007.2 (enabled by default)
+  OM_GIT_BRANCH := org.openmoko.asu.dev     # ASU bleeding edge
+  OM_GIT_BRANCH := org.openmoko.asu.testing # ASU testing
+  OM_GIT_BRANCH := org.openmoko.asu.stable  # ASU stable
+  OM_GIT_BRANCH := org.openembedded.dev     # FSO
 
 Note that if you want to build FSO, you should change OM_GIT_SITE to git.openembedded.net as well, since FSO is developed in the OpenEmbedded repository, not the Openmoko repository.
 
