--- a/Openmoko_Taiwan.mw
+++ b/Openmoko_Taiwan.mw
@@ -17,9 +17,103 @@ Openmoko 大中華區行銷部安排自由軟體基金會創辦人 Richard Stall
 * 台北場：5/14 (Wed.) 於淡江大學，台北。時間：10:00~13:00。
 * 新竹場：5/15 (Thr.) 於清華大學，新竹。時間：19:00~22:00。
 
-過去大家經常誤解Free Software（自由軟體）與Open Source（開放源碼）的意 義，事實上這是完全不一樣的事情。Free Software不等於Open Source，Richard Stallman這次來台也特別希望能讓說明這二者的關係。Richard 自已也做了很清楚 簡單的解釋，他說「Open Source只是Free Software Movement的一個口號，這是完全不同的二件事情，Open Source並不是自由軟體運動的代表。」
+{| cellspacing="5" cellpadding="0" style="padding: 2%; margin:0em 0em 1em 0em; border:1px solid #c8bbbf; background:#ECE5B6; width:100%" 
+| 一睹大師風采！<br /><br />Openmoko、清華大學電通中心與清華大學資工系一起邀請您來新竹聽演講！<br />
+Openmoko與淡江大學資工系一起邀請您來台北聽演講！
+|}
 
-更完整的活動資訊請參閱[[Richard_Stallman/zh_tw | Richard Stallman 來台演講活動]]
+Richard Stallman[1] 是 GNU Compiler Collection (GCC) 與 GNU Debugger (GDB) 的原始作者與開發者，GCC 與 GDB 是很廣為使用且有名的自由軟體。Richard 於 1984 年發動 GNU operating system 發展計畫，並在 1985 年成立 Free Software Foundation[2]（自由軟體基金會），接著在 1989 年寫出第一個 GPL （GNU General Public License）[3] 條款。GPL 至今已是最重要的自由軟體授權條款，至今有超過 60% 的自由軟體都是採取 GPL 授權規範。因應商業化需要，GPLv3 在經過長時間的討論後，也於 2007 年 6 月正式釋出[4]。
+
+Richard 將於 5 月 12 來台，並親自發表演說。Richard 本次來台將有二場公開演講，首場時間是 5/14(Wed.) 於淡江大學舉辦，第二場將在 5/15(Thr.) 於清華大學舉辦。台北場的講題為「The Danger of Software Patents」，Richard 將保留 1 個小時以上的時間與大家進行論壇討論。歡迎事先準備好您的問題來請益自由軟體之父。清大場的講題為「The Free Software Movement and the GNU/Linux Operating System」，Richard 將講述他的自由軟體運動歷程，同時也會保留 1 個小時以上的時間與大家進行討論。
+
+=== 台北場：5/14(Wed.) 淡江大學 ===
+
+*講題：The Danger of Software Patents
+*時間：10:00~13:00
+*地點：淡江大學 鐘靈中正堂
+*摘要：
+    Richard Stallman will explain how software patents obstruct
+    software development.  Software patents are patents that cover
+    software ideas.  They restrict the development of software, so
+    that every design decision brings a risk of getting sued.  Patents
+    in other fields restrict factories, but software patents restrict
+    every computer user.  Economic research shows that they even
+    retard progress.
+
+=== 新竹場：5/15(Thr.) 清華大學 ===
+
+* 講題：The Free Software Movement and the GNU/Linux Operating System 
+* 時間：19:00~22:00
+* 地點：清華大學　大禮堂
+* 摘要：
+    Richard Stallman will speak about the goals and philosophy of the
+    Free Software Movement, and the status and history of the GNU
+    operating system, which in combination with the kernel Linux is
+    now used by tens of millions of users world-wide.
+
+=== 交通資訊 ===
+
+清華大學
+*國道一號（中山高）: 約95公里下新竹交流道，沿光復路往新竹市區方向直走約一公里，即可到達清大正門。
+*火車：新竹火車站搭1路、2路及1甲公車。沿SOGO百貨與金石堂中間小路，過SOGO一公尺有公車站牌。
+*高鐵：高鐵接駁車可直達清大正門。
+
+淡江大學
+*因校園車位相當有限，故不建議開車前往。
+*捷運：淡水線至淡水站（終點）下載，可轉搭指南客運「淡水捷運站至淡江大學」接駁車。
+*公車：於台北市北門站搭指南客運「北門-承德路-淡江大學」線，可直達終點站淡江大學。（費用：三段票，45元。）
+
+=== 活動訊息 ===
+
+標題：自由軟體基金會創辦人 Richard Stallman 來台演講
+
+自由軟體基金會創辦人、同時也是知名軟體 GNU Compiler Collection (GCC) 與 GNU Debugger (GDB) 的原始作者與開發者 Richard Stallman 將於 5 月 12 日來台並發表演說。Richard 於 1984 年發動 GNU operating system 發展計畫，並在 1985 年成立 Free Software Foundation（自由軟體基金會），接著在 1989 年寫出第一個 GPL （GNU General Public License）條款。GPL 至今已是最重要的自由軟體授權條款，至今有超過 60% 的自由軟體都是採取 GPL 授權規範。因應商業化需要，GPLv3 在經過長時間的討論後，也於 2007 年 6 月正式釋出，並受到產業界高度重視與討論。
+
+睽違三年，Richard Stallman 再度來台，將在台北與新竹各發表一場公開演說。Richard 提到「希望能讓大家了解 GNU operating system，以及自由軟體（free software）的真正意義。」除了發表與自由軟體相關之演說外，Richard Stallman 也會和現場聽眾進行公開討論，這是一個向 Richard 當面請益的好機會。
+
+Richard 本次來台預計將發表與「自由軟體運動」以及「軟體專利威脅」有關之演說。所有活動都是免費參加，Richard 同時也非常想聽到來自各界對自由軟體的聲音。詳細活動資訊請參閱 Openmoko Wiki 活動頁面。
+
+* 活動頁面：http://wiki.openmoko.org/wiki/Richard_Stallman/zh_tw
+
+* 活動連絡人：Jollen Chen <jollen@openmoko.org> / Chelsea Wei <chelsea@openmoko.com>
+
+=== 新聞稿 ===
+
+新聞稿(Press Release)-Openmoko-自由軟體基金會創辦人Richard Stallman來台
+
+台北--2008年5月8日 -- 自由軟體基金會創辦人、同時也是知名軟體GNU Compiler Collection (GCC) 與GNU Debugger (GDB)的原始作者與開發者Richard Stallman 將於5月12日來台。睽違三年，自由軟體運動精神領袖Richard Stallman再度來台，並將分別於5月14日上午10點於淡江大學鍾靈中正堂，以及5月15晚間7點於清華大學大禮堂發表公開演說。
+
+負責接待的 Openmoko提到「Richard希望能讓大家了解GNU operating system，以及自由軟體 （free software）的真正意義。」Richard Stallman於1984年發起GNU operating system發展計畫，並在1985年成立 Free Software Foundation（自由軟體基金會），接著在1989年寫出第一個GPL （GNU General Public License）條款。GPL是非常重要的自由軟體授權條款，至 今有超過 60% 的自由軟體都是採取GPL授權規範。因應商業化需要，GPL第三版在 經過長時間的討論後，於2007年6月正式釋出，受到產業界高度重視與討論。Richard 本次來台預計將發表與「自由軟體運動」以及「軟體專利威脅」有關之演 說，Richard Stallman這次也將說明GPL第三版新增有關軟體專利條款的部份。
+
+過去大家經常誤解Free Software（自由軟體）與Open Source（開放源碼）的意 義，事實上這是完全不一樣的事情。Free Software不等於Open Source，Richard Stallman這次來台也特別希望能讓說明這二者的關係。Richard 自已也做了很清楚 簡單的解釋，他說「Open Source只是Free Software Movement的一個口號，這是 完全不同的二件事情，Open Source並不是自由軟體運動的代表。」
+
+Richard Stallman提到，大家所習慣的「Linux」應該被稱為「GNU/Linux」或是 「GNU operating system」。GNU operating system 計畫於1984年由Richard Stallman發起，此計畫的用意是發展一套保障使用者使用自由的作業系統，當GNU operating system大多數主要的軟體都已經開發完成時，唯獨最重要的作業系統核 心「Hurd」一直未能有進展。此時，Linux核心發展計畫堀起，並取代 Hurd核心成 為GNU operating system的作業系統核心，但事實上，整套作業系統仍然包含許多 GNU軟體。
+
+Linux並不能單獨使用，Linux核心必須搭配許多GNU operating system計畫下的軟 體，才能運作。因此Richard希望向大家說明，Linux只是一個作業系統核心，整個 作業系統環境應稱為GNU/Linux，或是GNU operating system。
+
+媒體連絡窗口:
+
+Chelsea Wei 魏嘉瑩<br />
+Openmoko Inc.<br />
++886 2 8751 5071 Ext. 2866<br />
+chelsea@openmoko.com
+
+<p>###</p>
+
+== Press Coverage ==
+
+* Linux 台灣, http://www.linux.org.tw/node/548
+* 科技日報, http://www.hope.com.tw/News/ShowNews.asp?O=200805051647268304
+* 清華公佈欄, http://infonet.et.nthu.edu.tw/bbs_p1.php?op=showContent&id=724&sub1=Academic
+* Jollen's Blog, http://www.jollen.org/blog/2008/05/richard_stallman_speech_taiwan.html
+* DigitalWall, http://www.digitalwall.com/scripts/displaypr.asp?UID=10028
+* OpenFoundry, http://www.openfoundry.org/component/option,com_content/Itemid,296/id,1550/lang,tw/task,view/
+* COdE fr3@K ,http://fsfoundry.org/codefreak/2008/05/04/richard-stallman-talks-in-taiwan/
+* Andrew Chang, http://andrewtw.wordpress.com/2008/05/03/richard_stallman/
+* tw.bbs.comp.linux, http://groups.google.com.tw/group/tw.bbs.comp.linux/browse_thread/thread/b62d2cf224cc4030
+* 大華技術學院資訊工程學系, http://www.csie.thit.edu.tw/announce/newDsp.asp?id=353
+* 交通大學資訊工程學系, http://www.cs.nctu.edu.tw/cht/announcements/post_t.php?news_sn=1089&class=5
+* Techlife科技生活, http://www.techlife.com.tw/01News/01news.asp?NID=33041
 
 ==校園巡迴九十六學年度==
 
