--- a/Openmoko_Taiwan.mw
+++ b/Openmoko_Taiwan.mw
@@ -1,12 +1,27 @@
-==訓練活動==
-
-===2008/08/09-Openmoko 體驗-新竹===
+==訓練課程-2008/08/09-新竹===
 
 Openmoko 一直致力於推動台灣地區的手機軟體教育計畫，九十七學年度開始 Openmoko 將與台灣地區多所學校合作，將 Openmoko 平臺以及 Neo FreeRunner 導入學校課程。負責台灣地區市場行銷的 Jollen Chen 於 8/9 (六) 至清華大學自強基金會進行 Openmoko 體驗式的教育訓練，此訓練使用了即將釋出給學校使用的 Openmoko 教材。現場帶領 40 名業界朋友，實際體驗 Free Your Phone 的理念。現場反應相當熱絡。在這裡提供當天進行訓練的教材，對 Neo FreeRunner 有興趣的朋友請不吝指教。
 
-* 活動報名：[http://edu.tcfst.org.tw/query_coursedetail.asp?courseidori=97C100&tcfst=yes  Om-training Lesson-1]
-
 * 下載講義：[http://people.openmoko.org/jollen/Om-training-Om2007.2-dev-v1.0-rc2.pdf Om-training-Om2007.2-dev-v1.0-rc2.pdf]
+
+===課程簡介===
+
+Openmoko 是全世界第一個開放式的行動通訊平臺，也是一個 open source 專案。Openmoko 於 2008 年 7 月 4 日正式推出第二代手機產品 Neo FreeRunner 後，受到極大的迴嚮與討論，西方媒體更是不斷報導。為了讓大家能更深入了解 Openmoko 專案的內容、Openmoko 技術平臺，以及 open mobile platform 的商業模式，特別邀請 Openmoko 大中華區行銷部的負責人為大家規劃實用的入門課程。本課程涵蓋 Openmoko 技術架構、開發環境建立、開放手機平臺趨勢、商業模式以及行銷策略，內容完整精彩。
+
+===課程對象===
+
+對 Openmoko 技術架構、開發環境建立、開放手機平臺趨勢、商業模式以及行銷策略有興趣的朋友。
+
+===課程大綱===
+
+*Openmoko 開源計畫與社群
+*開放手機平臺大革命
+*Openmoko software stack: Om 2007.2、ASU、FSO
+*開放手機的商業模式: 以 Openmoko 為例
+*Mobile 2.0 行銷策略與 Openmoko 做法
+*Neo FreeRunner 介紹與開發環境建立 [http://people.openmoko.org/jollen/Om-training-Om2007.2-dev-v1.0-rc2.pdf Om-training-Om2007.2-dev-v1.0-rc2.pdf]
+*撰寫第一個 Neo FreeRunner 應用程式 [http://people.openmoko.org/jollen/Om-training-Om2007.2-dev-v1.0-rc2.pdf Om-training-Om2007.2-dev-v1.0-rc2.pdf]
+*會後討論
 
 ==社群活動==
 
