/* 訓練課程-2008/08/09-新竹= */

--- a/Openmoko_Taiwan.mw
+++ b/Openmoko_Taiwan.mw
@@ -1,4 +1,4 @@
-==訓練課程-2008/08/09-新竹===
+==訓練課程-2008/08/09-新竹==
 
 Openmoko 一直致力於推動台灣地區的手機軟體教育計畫，九十七學年度開始 Openmoko 將與台灣地區多所學校合作，將 Openmoko 平臺以及 Neo FreeRunner 導入學校課程。負責台灣地區市場行銷的 Jollen Chen 於 8/9 (六) 至清華大學自強基金會進行 Openmoko 體驗式的教育訓練，此訓練使用了即將釋出給學校使用的 Openmoko 教材。現場帶領 40 名業界朋友，實際體驗 Free Your Phone 的理念。現場反應相當熱絡。在這裡提供當天進行訓練的教材，對 Neo FreeRunner 有興趣的朋友請不吝指教。
 
