--- a/Openmoko_Taiwan.mw
+++ b/Openmoko_Taiwan.mw
@@ -23,9 +23,7 @@ Openmoko 是全世界第一個開放式的行動通訊平臺，也是一個 open
 *撰寫第一個 Neo FreeRunner 應用程式 [http://people.openmoko.org/jollen/Om-training-Om2007.2-dev-v1.0-rc2.pdf Om-training-Om2007.2-dev-v1.0-rc2.pdf]
 *會後討論
 
-==社群活動==
-
-===自由軟體基金會創辦人 Richard Stallman 來台===
+==Richard Stallman 台灣區演講==
 
 Openmoko 大中華區行銷部安排自由軟體基金會創辦人 Richard Stallman 來台演講。時間如下：
 
