--- a/Openmoko_Taiwan.mw
+++ b/Openmoko_Taiwan.mw
@@ -113,7 +113,7 @@ chelsea@openmoko.com
 
 <p>###</p>
 
-== Press Coverage ==
+=== Press Coverage ===
 
 * Linux 台灣, http://www.linux.org.tw/node/548
 * 科技日報, http://www.hope.com.tw/News/ShowNews.asp?O=200805051647268304
