--- a/Games%2FOm_2007.2.mw
+++ b/Games%2FOm_2007.2.mw
@@ -26,7 +26,7 @@ Akin to Mastermind. You are trying to figure out the 4 choices, in the correct o
 Played in a crossword like grid, there are diamonds, mines and dotted circles scattered around the board. Mines kill you, diamonds are the treasure you seek. The dotted circles capture you, as the name of the game implies, from  your inertia, as do walls. The surface is akin to ice, in that if you start to move, you'll continue to do so until you stop. Trickier then it seems at first glance, it's good for a few minutes of fun.
 
 ===Lightup===
-Seems like a Sodoku inspired game, of some sort. More research needed.
+Based on eight-queens chess puzzle. You need to place the bulbs so there is light on entire board. In addition there are black squares that stops light and black squares with numbers, this number says how many bulbs must be placed around that square.
 
 ===Loopy===
 
