--- a/Openmoko_Taiwan.mw
+++ b/Openmoko_Taiwan.mw
@@ -127,7 +127,7 @@ chelsea@openmoko.com
 * 交通大學資訊工程學系, http://www.cs.nctu.edu.tw/cht/announcements/post_t.php?news_sn=1089&class=5
 * Techlife科技生活, http://www.techlife.com.tw/01News/01news.asp?NID=33041
 
-==媒體專訪 Digitimes 名人講堂-2008/02/22==
+==Digitimes 名人講堂-2008/02/22==
 
 名人講堂：OpenMoko總裁Sean Moss-Pultz
 開放式手機時代來臨 Mobile 2.0美夢不遠
