--- a/Openmoko_Taiwan.mw
+++ b/Openmoko_Taiwan.mw
@@ -235,7 +235,7 @@ Openlab 的成立目的是為了與台灣地區的社群與學校進行互動，
 |-
 |}
 
-==公關稿==
+===公關稿===
 
 Openmoko是全世界第一個 100% 開放源碼（open source）的 Linux 手機軟體平臺。Openmoko 的 project leader, Mr. Sean Moss-Pultz, 於FIC（大眾電腦，臺灣）內部培育這項計畫，並於二零零六年十一月正式對外公開推出。Openmoko, Inc.（我本墨客股份有限公司）也於二零零七年十月二十三日正式成立，很難想像，這個全球知名的開放源碼 Linux 手機專案的研發總部就位於台灣台北市內湖區。
 
