--- a/Openmoko_Taiwan.mw
+++ b/Openmoko_Taiwan.mw
@@ -204,6 +204,20 @@ Openmoko 因為開放源碼的特性，因此很適合教學與研究場合。Op
 * 淡江大學（大學部）：4/18(四)，03:10PM~05:00PM
 * 中正大學：4/28(一），02:00PM~04:00PM
 
+==Openmoko 台灣區校園巡迴記者會-2008/02/14==
+
+Openmoko 因為開放源碼的特性，因此很適合教學與研究場合。當天 Openmoko 將正式發佈校園活動計畫，以及校園的支持辦法，現場將有一個正式的記者訪談會。希望了解更多相關資訊的老師或學生，歡迎到場參觀，自由入場。時間是： 03:00PM~04:20PM。Openmoko 即將啟動台灣區校園推廣計畫。我們將會在2月份到6月份之間，以下以學校進行交流演講，歡迎同學到場。
+
+===訪談要點===
+
+* Openmoko Education 計畫的產生緣由以及目的。
+* 演講活動將涵蓋的學校，以及演講內容。
+* Openmoko 在台灣的市場規劃。
+* Openmoko 開發總部鎖定在台灣，台灣在 Open Source 產業的發展看法。
+* Openmoko 與競爭對手的關係。
+* Neo FreeRunner 新產品的期許和目標。
+
+
 ==Openlab Opening-2007-11-17==
 
 Openlab 的成立目的是為了與台灣地區的社群與學校進行互動，大中華區行銷部特別規劃了開幕活動。
