--- a/Openmoko_Wiki_Official_Index_Page.mw
+++ b/Openmoko_Wiki_Official_Index_Page.mw
@@ -486,6 +486,7 @@ __NOTOC__
 *[[Press Coverage]]
 
 ===Information===
+*[[Getting Openmoko]]
 *[[ChangeLog]]
 *[[DailyBuiltImages]]
 *[[External links]]
