/* Richard Stallman 台灣區演講 */

--- a/Openmoko_Taiwan.mw
+++ b/Openmoko_Taiwan.mw
@@ -77,6 +77,8 @@ Openmoko Inc.<br />
 地址：台北市內湖區陽光街300號7樓<br />
 Email：chelsea@openmoko.com
 
+== Openmoko 課程計畫 ==
+
 ==Richard Stallman 台灣區演講==
 
 Openmoko 大中華區行銷部安排自由軟體基金會創辦人 Richard Stallman 來台演講。時間如下：
