/* ASU Test Report */

--- a/Test_Cases.mw
+++ b/Test_Cases.mw
@@ -50,7 +50,7 @@ __NOTOC__
 
 About the full bug reports for Om 2008.8 you can check: [http://people.openmoko.org/testing/software/Testreport/ Testreport]
 
-If you want to know whither the bug that you find is exist in our bug track, you can check:
+If you want to know whether the bug that you find is exist in our bug track, you can check:
 [http://docs.openmoko.org/trac/query?status=accepted&status=assigned&status=in_testing&status=new&status=reopened&group=status&reporter=wendy_hung&reporter=will&reporter=regina_kim&order=id&col=id&col=summary&col=status&col=type&col=priority&col=milestone Custom Query]<br>
 It's all the bugs that the testing team reported.
 
