--- a/Manual_Debian.mw
+++ b/Manual_Debian.mw
@@ -61,11 +61,7 @@ If you don't have debootstrap on your system you can download the results here:
 
 ssh to your neo and format your sd card appropriately. I'm using an 8GB SDHC card here.
 
- NOTE: it might be a good idea not to use ext3. This is because ext3 is a heavily journalising file system and on the                                     
- freerunner (sd card) might cause premature death of the card. It is recommened you use ext2 or another similar file       
- system. One also will need a vfat or ext2 (only vfat worked for me with the stock u-boot for the freerunner. On  
- which to place the kernel to boot off. See the [[Booting_from_SD]] If you have not done so already.
- 
+:''NOTE: it might be a good idea not to use ext3. This is because ext3 is a heavily journalising file system and on the freerunner (sd card) might cause premature death of the card. It is recommened you use ext2 or another similar file system. One also will need a vfat or ext2 (only vfat worked for me with the stock u-boot for the freerunner. On which to place the kernel to boot off. See the [[Booting_from_SD]] If you have not done so already.''
 
  fdisk /dev/mmcblk0
  We will now create a 8 mb partition for our kernel and another one for the rootfs which will take up all the   
