/* ASU Test Report */

--- a/Test_Cases.mw
+++ b/Test_Cases.mw
@@ -1,15 +1,15 @@
 __NOTOC__
 = ASU Test Report =
-
-About the full bug reports for Om 2008.8 you can check: [http://people.openmoko.org/testing/software/Testreport/ Testreport]
-
 If you want to know whether the bug that you find is exist in our bug track, you can check:
 [http://docs.openmoko.org/trac/query?status=accepted&status=assigned&status=in_testing&status=new&status=reopened&group=status&reporter=wendy_hung&reporter=will&reporter=regina_kim&order=id&col=id&col=summary&col=status&col=type&col=priority&col=milestone Custom Query]<br>
-It's all the bugs that the testing team reported.
+It's all the bugs that the testing team reported, by using all images including our latest release image.
+
+About our full Test reports from June you can check: [http://people.openmoko.org/testing/software/Testreport/ Testreport]
+
 
 Here are some major bugs that been found before Om 2008.8 release, <br>
 - [#1760] Out going call can not really disconnect by "End Call" if the other one did not pick up the call.<br>
-- Some of the testing phone can not make phone calls but can receive/send SMS??? (With alert message"no network")<br>
+ - Some of the testing phone can not make phone calls but can receive/send SMS??? (With alert message"no network")<br>
 - [#1691] qpe crashed all the time in one of our testing phone.<br>
 - Two of our phone can not wake up from suspend time, and we're still tracking it.<br>
 - [#1734] WiFi can not work (show up "unknown" all the time) <br>
@@ -18,8 +18,9 @@ Here are some major bugs that been found before Om 2008.8 release, <br>
 - [#1661] Unable to send saved tags by entering number (Locations) <br>
 - [#1635] After x hours the call active will become unstable. Can't receive or make a phone call normally. <br>
 
-If you're sure it's a bug that's not in the track, than please use the [http://docs.openmoko.org/trac/ trac] system well to report it, we'll appreciate it.<br>
-If you just want to ask some question, you can send a mail to our [http://lists.openmoko.org/mailman/listinfo/ mailing lists]<br>
+Please check the bug track at first, if you're sure it's a bug that's not in the track, than please use the [http://docs.openmoko.org/trac/ trac] system well to report it, we'll appreciate it.<br>
+If you want to ask some question, you can send a mail to our [http://lists.openmoko.org/mailman/listinfo/  lists]<br>
+
 
 = Hardware =
 [[GSM 900 RF Test Cases]]<br>
