/* ASU Test Report */

--- a/Test_Cases.mw
+++ b/Test_Cases.mw
@@ -18,7 +18,8 @@ Here are some major bugs that been found before Om 2008.8 release, <br>
 - [#1661] Unable to send saved tags by entering number (Locations) <br>
 - [#1635] After x hours the call active will become unstable. Can't receive or make a phone call normally. <br>
 
-Please check the bug track at first, if you're sure it's a bug that's not in the track, than please use the [http://docs.openmoko.org/trac/ trac] system well to report it, we'll appreciate it.<br>
+
+PLEASE CHECK THE BUG TRACK AT FIRST, if you're sure it's a bug that's not in the track, than please use the [http://docs.openmoko.org/trac/ trac] system well to report it, we'll appreciate it.<br>
 If you want to ask some question, you can send a mail to our [http://lists.openmoko.org/mailman/listinfo/  lists]<br>
 
 = Hardware =
