--- a/Test_Cases.mw
+++ b/Test_Cases.mw
@@ -4,8 +4,8 @@ If you want to know whether the bug that you find is exist in our bug track, you
 [http://docs.openmoko.org/trac/query?status=accepted&status=assigned&status=in_testing&status=new&status=reopened&group=status&reporter=wendy_hung&reporter=will&reporter=regina_kim&order=id&col=id&col=summary&col=status&col=type&col=priority&col=milestone Custom Query]<br>
 It's all the bugs that the testing team reported, by using all images including our latest release image.
 
-About our full Test reports from June you can check: [http://people.openmoko.org/testing/software/Testreport/ Testreport]
-
+'''About our full Test reports from June you can check: [http://people.openmoko.org/testing/software/Testreport/ Testreport]
+'''
 
 Here are some major bugs that been found before Om 2008.8 release, <br>
 - [#1760] Out going call can not really disconnect by "End Call" if the other one did not pick up the call.<br>
