--- a/Test_Cases.mw
+++ b/Test_Cases.mw
@@ -22,6 +22,8 @@ Here are some major bugs that been found before Om 2008.8 release, <br>
 PLEASE CHECK THE BUG TRACK AT FIRST, if you're sure it's a bug that's not in the track, than please use the [http://docs.openmoko.org/trac/ trac] system well to report it, we'll appreciate it.<br>
 If you want to ask some question, you can send a mail to our [http://lists.openmoko.org/mailman/listinfo/  lists]<br>
 
+=== If you are not sure it is a bug or not, please leave a message below:===
+
 = Hardware =
 [[GSM 900 RF Test Cases]]<br>
 
